# Cinema-Ticket-Reservation-System

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  start.sh
backend/app/: init_movies.py  main.py
backend/app/api/: main.py
backend/app/api/routes/: hall_router.py  hall_rows_router.py  health_router.py  login_router.py  (+6 more)
backend/app/celery/: celery_app.py
backend/app/core/: __init__.py  auth.py  complete_db.py  config.py  database.py  db_add.py  db_clean.py  init_db.py  reservation_check.py
backend/app/models_global/: __init__.py  admin_global_model.py  user_global_model.py
backend/app/models_local/: __init__.py  hall_model.py  hall_row_model.py  movie_model.py  payment_model.py  reservation_model.py  reservation_seat_model.py  seat_model.py  show_model.py
backend/app/schemas/: __init__.py  admin_global_schema.py  hall_row_schema.py  hall_schema.py  movie_schema.py  payment_schema.py  reservation_schema.py  reservation_seat_schema.py  seat_schema.py  show_schema.py  user_global_schema.py
backend/app/tests/: test_dummy.py
cinema-ticket-reservation/: docker-compose.override.yml  pyproject.toml
cinema-ticket-reservation/API/: Dockerfile.dev  pyproject.toml
cinema-ticket-reservation/FrontEnd/: package-lock.json  package.json
cinema-ticket-reservation/backend/: Dockerfile.dev  pyproject.toml
cinema-ticket-reservation/backend/app/: main.py
cinema-ticket-reservation/frontend/: Dockerfile.dev  package-lock.json
cinema-ticket-reservation/frontend/src/: App.js
cinema-ticket-reservation/tests/: test_dummy.py
(+90 files in other folders)
