[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Klaudiusz Grobelski Łukasz Filo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.8"
fastapi = "^0.115.11"
pytest = "^8.3.5"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
python-jose = "^3.4.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.11.1"}
python-multipart = "^0.0.20"
requests = "^2.32.3"
greenlet = "^3.1.1"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
